--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.114.4",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.169.0",
